# Text-to-SQL-AI-Agent

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml  requirements.txt
backend/database/: dummy_data.py  populate_data.py  sqlite-connector.py
backend/database/connectors/: sqlite-connector.py
backend/rag/: data_ingestion.py  data_loader.py
data/: business_glossary.md  business_metrics.md  query_patterns.md
data/tables/: accounts_schema.yaml  advisors_schema.yaml  credit_cards_schema.yaml  customers_schema.yaml  holdings_schema.yaml  loans_schema.yaml  market_prices_schema.yaml  portfolios_schema.yaml  securities_schema.yaml  support_tickets_schema.yaml  transactions_schema.yaml
