[project]
name = "text-to-sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.13.10",
    "faker>=40.23.0",
    "fastapi>=0.138.0",
    "ipython>=9.14.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.3",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "langserve>=0.3.3",
    "langsmith>=0.9.1",
    "mcp>=1.28.0",
    "pinecone>=7.3.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
